--- a/imagegallery.html
+++ b/imagegallery.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image gallery</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <h1>Our Image gallery</h1>
-        <img src="https://images.unsplash.com/photo-1497752531616-c3afd9760a11?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTgZrMIHUjmmtBF3lX4PH7hjb6Q1haxdxYiJA&usqp=CAU" alt="tiger">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTK2FpZLewAPD6WnKuJrqXbgWsklUZXo73AbQ&usqp=CAU" alt="Elephant">
-        <img src="https://worldexpeditions.com/croppedimages/Indian-Sub-Continent/Nepal/Chitwan-National-Park-465543-500px.jpg" alt="Rhino">
+    <header>
+        <h1 class="h1">Our Image gallery</h1>
+    </header>
+    <div class="container">
+        <img class="image" src="https://images.unsplash.com/photo-1497752531616-c3afd9760a11?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+        <img class="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTgZrMIHUjmmtBF3lX4PH7hjb6Q1haxdxYiJA&usqp=CAU" alt="tiger">
+        <img class="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTK2FpZLewAPD6WnKuJrqXbgWsklUZXo73AbQ&usqp=CAU" alt="Elephant">
+        <img class="image" src="https://worldexpeditions.com/croppedimages/Indian-Sub-Continent/Nepal/Chitwan-National-Park-465543-500px.jpg" alt="Rhino">
     </div>
 </body>
 
